--- a/css/cs-style.css
+++ b/css/cs-style.css
@@ -145,7 +145,7 @@ body {
 .btn-suburb {
   /* color: #0055bb; */
   /* color: black; */
-  font-size: .75rem;
+  font-size: 1.25rem;
   margin: 4px 4px;
   padding: 2px 6px;
 }
